# tabela_nutricional_web

./: .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  email_service.py  entrypoint.sh  gunicorn.conf.py  models.py  plans_example.csv  pyproject.toml  requirements.txt  run.sh  run_flask.sh  wsgi.py
.github/workflows/: ci-cd.yml
app/: __init__.py  cli.py  config.py  decorators.py  errors.py  extensions.py  middleware.py  plan_seed_data.py
app/ai/knowledge/: company_overview.md  policy_support.md  privacy_summary.md  product_overview.md
app/blueprints/: account.py  admin.py  ai_support.py  auth.py  billing.py  calculator.py  chat.py  legacy.py  main.py  product.py  support.py
app/models/: __init__.py  audit.py  billing.py  chat.py  chatbot.py  plan.py  support.py  table.py  user.py
app/services/: audit_service.py  auth_service.py  chat_service.py  chatbot_service.py  email_service.py  plan_service.py  stripe_service.py  table_service.py  usage_service.py
deploy/: HOSTINGER_DNS_SETUP.md  bootstrap_vps.sh  docker-compose.prod.yml  docker-compose.yml  export_subscribers.sh  install_stripe_cli.sh  release.sh  setup_stripe.sh  vps_deploy.sh
docs/: CI_CD_HOSTINGER.md  GOOGLE_LOGIN_SETUP.md  README_CONFIGURACAO_EXTERNA.md  STRIPE_SETUP.md  qa_stability_audit.md
legacy/: README.md  anvisaCalculator.js  index.html  script.js  styles.css
migrations/versions/: 20a84d79f8d0_initial_full_schema.py  4c19d1df5285_add_nutrition_tables_and_table_versions.py  5f47422a0b6d_add_audit_logs_and_support_tickets.py  c9d8f1a2b3c4_add_stripe_subscription_fields.py  d6dd31bf9f59_add_chat_sessions_and_messages.py  d7e3f2a1b4c5_add_soft_delete_and_regulatory_version.py  e4c8a13d9b77_add_chatbot_support_tables.py
src/tabela_nutricional/: AUDIT_MAPPING.md  __init__.py  allergens.py  calculator.py  energy.py  portion_reference.py  rounding.py  significance.py  taco.py  types.py  validators.py  vdr_values.py
src/tabela_nutricional/data/: taco.json
static/: app.js  chat-widget.css  chat-widget.js  styles.css
templates/: _nutrition_table_macro.html  base.html  index.html  login.html  register.html
templates/account/: dashboard.html  settings.html  table_view.html  tables_list.html  upgrade.html  usage.html
templates/admin/: chatbot.html  dashboard.html  logs.html  tickets.html  user_detail.html  user_list.html
templates/app/: base_app.html  calculator.html
templates/auth/: forgot_password.html  reset_password.html
templates/billing/: cancel.html  success.html
templates/errors/: 400.html  403.html  404.html  429.html  500.html
templates/landing/: _chat_widget.html  base_landing.html  index.html
templates/main/: pricing.html  privacy.html
templates/public/: base_public.html
templates/support/: contact.html  help.html  ticket_list.html
tests/: conftest.py  test_allergens.py  test_anvisa_conformance.py  test_audit.py  test_auth_service.py  test_billing.py  test_calculator.py  test_chat.py  test_chatbot.py  test_csrf.py  test_email_flows.py  test_energy.py  test_excel_import.py  test_input_validation.py  test_plan_service.py  test_portion_reference.py  test_pricing.py  test_public_routes.py  test_quota_api.py  test_rounding.py  test_security.py  test_significance.py  test_significance_expanded.py  test_stripe_service.py  test_support_routes.py  test_table_service.py  test_table_views.py  test_taco_search.py  test_types.py
